[package]
name = "reseeding_rng"
version = "0.1.0-alpha.1"
authors = ["LiosK <contact@mail.liosk.net>"]
license = "Apache-2.0"
edition = "2024"
rust-version = "1.85"
description = "ReseedingRng on rand v0.10"
repository = "https://github.com/LiosK/reseeding_rng-rs"

[features]
default = ["rand010"]
rand010 = ["dep:rand_core010"]

[dependencies]
rand_core010 = { package = "rand_core", version = "0.10", default-features = false, optional = true }

[package.metadata.docs.rs]
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
