[package]
name = "reseeding_rng"
version = "0.10.3"
authors = ["LiosK <contact@mail.liosk.net>"]
license = "Apache-2.0"
edition = "2024"
rust-version = "1.85"
description = "ReseedingRng that periodically reseeds the underlying PRNG"
repository = "https://github.com/LiosK/reseeding_rng-rs"
documentation = "https://docs.rs/reseeding_rng"
exclude = ["/.github/"]

[dependencies]
rand_core = { version = "0.10", default-features = false }

[dev-dependencies]
rand = "0.10"
rand09 = { package = "rand", version = "=0.9.2" }
rand_chacha09 = { package = "rand_chacha", version = "=0.9.0" }

[package.metadata.docs.rs]
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
